# koto

./: Cargo.toml  justfile
crates/bytecode/: Cargo.toml
crates/bytecode/src/: chunk.rs  compiler.rs  frame.rs  instruction.rs  instruction_reader.rs  module_loader.rs
crates/cli/: Cargo.toml
crates/cli/docs/libs/: color.md  geometry.md
crates/derive/: Cargo.toml
crates/derive/src/: attributes.rs  koto_copy.rs  koto_impl.rs  koto_trace.rs  koto_type.rs  lib.rs  macros.rs
crates/format/: Cargo.toml
crates/koto/: Cargo.toml
crates/koto/src/: error.rs  koto.rs  lib.rs
crates/koto/tests/: derive_koto_impl_doc.rs  derive_koto_trace_doc.rs  repl_mode_tests.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lexer.rs  span.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  macros.rs  opt_ptr.rs  pointee.rs  pointee_traits.rs  ptr.rs  ptr_impl.rs  ptr_mut.rs  send_sync.rs  small_vec.rs  trace.rs  untrace.rs
crates/memory/src/ptr_impl/: dummy_cell.rs  dummy_ptr.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  constant_pool.rs  error.rs  node.rs  parser.rs  string.rs  string_format_options.rs  string_slice.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: error.rs  lib.rs  prelude.rs  send_sync.rs  vm.rs
crates/runtime/src/core_lib/: io.rs  iterator.rs  koto.rs  map.rs  mod.rs  os.rs
crates/runtime/src/core_lib/iterator/: adaptors.rs  generators.rs  peekable.rs
crates/runtime/src/core_lib/number/: step_to.rs
crates/runtime/src/core_lib/os/: command.rs
crates/runtime/src/core_lib/string/: iterators.rs
crates/runtime/src/io/: buffered_file.rs  file.rs  stdio.rs
crates/runtime/src/types/: function.rs  iterator.rs  list.rs  map.rs  meta_map.rs  native_function.rs  number.rs  object.rs  range.rs  tuple.rs  value.rs  value_key.rs
crates/runtime/tests/: object_tests.rs  runtime_failures.rs  vm_tests.rs
crates/serde/: Cargo.toml
crates/test_utils/: Cargo.toml
crates/test_utils/src/: lib.rs  output_capture.rs  run_test_script.rs
libs/color/: Cargo.toml
libs/color/src/: color.rs  lib.rs
libs/geometry/: Cargo.toml
libs/geometry/src/: macros.rs  rect.rs  vec2.rs  vec3.rs
libs/json/: Cargo.toml
libs/random/: Cargo.toml
libs/random/src/: lib.rs
libs/random/tests/: shuffle.rs
libs/regex/: Cargo.toml
libs/tempfile/: Cargo.toml
libs/tempfile/src/: lib.rs
libs/toml/: Cargo.toml
libs/yaml/: Cargo.toml
