[package]
name = "koto_bytecode"
version = "0.17.0"
description = "The bytecode compiler used by the Koto programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use any other than `rc`, default features must be disabled.
agc = ["koto_memory/agc", "koto_parser/agc"]
arc = ["koto_memory/arc", "koto_parser/arc"]
gc = ["koto_memory/gc", "koto_parser/gc"]
rc = ["koto_memory/rc", "koto_parser/rc"]

[dependencies]
koto_memory = { workspace = true }
koto_parser = { workspace = true }

circular-buffer = { workspace = true }
derive-name = { workspace = true }
dunce = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
