[package]
name = "koto_cli"
version = "0.17.0"
description = "A CLI and script runner for the Koto programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use any other than `rc`, default features must be disabled.
agc = [
  "koto/serde",
  "koto/agc",
  "koto_color/agc",
  "koto_geometry/agc",
  "koto_json/agc",
  "koto_random/agc",
  "koto_regex/agc",
  "koto_tempfile/agc",
  "koto_toml/agc",
  "koto_yaml/agc",
]
arc = [
  "koto/serde",
  "koto/arc",
  "koto_color/arc",
  "koto_geometry/arc",
  "koto_json/arc",
  "koto_random/arc",
  "koto_regex/arc",
  "koto_tempfile/arc",
  "koto_toml/arc",
  "koto_yaml/arc",
]
gc = [
  "koto/serde",
  "koto/gc",
  "koto_color/gc",
  "koto_geometry/gc",
  "koto_json/gc",
  "koto_random/gc",
  "koto_regex/gc",
  "koto_tempfile/gc",
  "koto_toml/gc",
  "koto_yaml/gc",
]
rc = [
  "koto/serde",
  "koto/rc",
  "koto_color/rc",
  "koto_geometry/rc",
  "koto_json/rc",
  "koto_random/rc",
  "koto_regex/rc",
  "koto_tempfile/rc",
  "koto_toml/rc",
  "koto_yaml/rc",
]

[[bin]]
name = "koto"
path = "src/main.rs"

[dependencies]
koto = { workspace = true }
koto_format = { workspace = true }

koto_color = { workspace = true }
koto_geometry = { workspace = true }
koto_json = { workspace = true }
koto_random = { workspace = true }
koto_regex = { workspace = true }
koto_tempfile = { workspace = true }
koto_toml = { workspace = true }
koto_yaml = { workspace = true }

anyhow = { workspace = true }
home = { workspace = true }
indexmap = { workspace = true }
mimalloc = { workspace = true }
pico-args = { workspace = true, features = [
  "combined-flags",
  "short-space-opt",
] }
pulldown-cmark = { workspace = true }
rustyline = { workspace = true, features = ["with-file-history"] }
serde = { workspace = true, features = ["derive"] }
textwrap = { workspace = true }
unicode-width = { workspace = true }

[target.'cfg(windows)'.dependencies]
crossterm = { workspace = true, features = ["windows"] }

[target.'cfg(unix)'.dependencies]
crossterm = { workspace = true }

[dev-dependencies]
test_bin = { workspace = true }
