[package]
name = "koto"
version = "0.17.0"
description = "A simple, expressive, embeddable programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc", "serde"]

# Only one memory management strategy can be enabled at a time.
# To use any other than `rc`, default features must be disabled.
agc = [
    "koto_bytecode/agc",
    "koto_parser/agc",
    "koto_runtime/agc",
    "koto_serde/agc",
    "koto_geometry/agc",
    "koto_test_utils/agc",
]
arc = [
    "koto_bytecode/arc",
    "koto_parser/arc",
    "koto_runtime/arc",
    "koto_serde/arc",
    "koto_geometry/arc",
    "koto_test_utils/arc",
]
gc = [
    "koto_bytecode/gc",
    "koto_parser/gc",
    "koto_runtime/gc",
    "koto_serde/gc",
    "koto_geometry/gc",
    "koto_test_utils/gc",
]
rc = [
    "koto_bytecode/rc",
    "koto_parser/rc",
    "koto_runtime/rc",
    "koto_serde/rc",
    "koto_geometry/rc",
    "koto_test_utils/rc",
]

# Enable serde support
serde = ["koto_serde"]

[dependencies]
koto_bytecode = { workspace = true }
koto_parser = { workspace = true }
koto_runtime = { workspace = true }
koto_serde = { workspace = true, optional = true }

thiserror = { workspace = true }

[dev-dependencies]
koto_geometry = { workspace = true }
koto_test_utils = { workspace = true }

anyhow = { workspace = true }
criterion = { workspace = true }
dunce = { workspace = true }
mimalloc = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[[bench]]
name = "koto_benchmark"
harness = false
test = true
