[package]
name = "koto_lexer"
version = "0.17.0"
description = "The lexer used by the Koto programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
agc = ["koto_memory/agc"]
arc = ["koto_memory/arc"]
gc = ["koto_memory/gc"]
rc = ["koto_memory/rc"]

[dependencies]
koto_memory = { workspace = true }

unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
unicode-xid = { workspace = true }
