[package]
name = "koto_runtime"
version = "0.17.0"
description = "The runtime used by the Koto programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use any other than `rc`, default features must be disabled.
agc = [
    "koto_bytecode/agc",
    "koto_derive/agc",
    "koto_lexer/agc",
    "koto_memory/agc",
    "koto_parser/agc",
    "koto_test_utils/agc",
]
arc = [
    "koto_bytecode/arc",
    "koto_derive/arc",
    "koto_lexer/arc",
    "koto_memory/arc",
    "koto_parser/arc",
    "koto_test_utils/arc",
]
gc = [
    "koto_bytecode/gc",
    "koto_derive/gc",
    "koto_lexer/gc",
    "koto_memory/gc",
    "koto_parser/gc",
    "koto_test_utils/gc",
]
rc = [
    "koto_bytecode/rc",
    "koto_derive/rc",
    "koto_lexer/rc",
    "koto_memory/rc",
    "koto_parser/rc",
    "koto_test_utils/rc",
]

[dependencies]
koto_bytecode = { workspace = true }
koto_derive = { workspace = true }
koto_lexer = { workspace = true }
koto_memory = { workspace = true }
koto_parser = { workspace = true }

indexmap = { workspace = true }
paste = { workspace = true }
rustc-hash = { workspace = true }
saturating_cast = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
unicode-segmentation = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { workspace = true, features = ["clock", "std"] }
instant = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { workspace = true, features = ["clock", "std", "wasmbind"] }
instant = { workspace = true, features = ["wasm-bindgen"] }

[dev-dependencies]
koto_test_utils = { path = "../../crates/test_utils", default-features = false }
test-case = { workspace = true }
