[package]
name = "koto_serde"
version = "0.17.0"
description = "Serde support for the Koto programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use any other than `rc`, default features must be disabled.
agc = ["koto_runtime/agc"]
arc = ["koto_runtime/arc"]
gc = ["koto_runtime/gc"]
rc = ["koto_runtime/rc"]

[dependencies]
koto_runtime = { workspace = true }

serde_core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
