[package]
name = "koto_test_utils"
version = "0.17.0"
description = "Testing utilities for the Koto programming language"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use any other than `rc`, default features must be disabled.
agc = ["koto_bytecode/agc", "koto_runtime/agc"]
arc = ["koto_bytecode/arc", "koto_runtime/arc"]
gc = ["koto_bytecode/gc", "koto_runtime/gc"]
rc = ["koto_bytecode/rc", "koto_runtime/rc"]

[dependencies]
koto_bytecode = { workspace = true }
koto_runtime = { workspace = true }

itertools = { workspace = true }
pulldown-cmark = { workspace = true }
