[package]
name = "koto_color"
version = "0.17.0"
description = "A Koto library containing simple color utilities"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use any other than `rc`, default features must be disabled.
agc = ["koto_runtime/agc", "koto_test_utils/agc"]
arc = ["koto_runtime/arc", "koto_test_utils/arc"]
gc = ["koto_runtime/gc", "koto_test_utils/gc"]
rc = ["koto_runtime/rc", "koto_test_utils/rc"]

[dependencies]
koto_runtime = { workspace = true }

derive_more = { workspace = true, features = ["from"] }
palette = { workspace = true }

[dev-dependencies]
koto_test_utils = { workspace = true }
