[package]
name = "koto_geometry"
version = "0.17.0"
description = "A Koto library with basic geometry types and operations"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use any other than `rc`, default features must be disabled.
arc = ["koto_runtime/arc", "koto_memory/arc", "koto_test_utils/arc"]
agc = ["koto_runtime/agc", "koto_memory/agc", "koto_test_utils/agc"]
rc = ["koto_runtime/rc", "koto_memory/rc", "koto_test_utils/rc"]
gc = ["koto_runtime/gc", "koto_memory/gc", "koto_test_utils/gc"]

[dependencies]
koto_runtime = { workspace = true }
koto_memory = { workspace = true }

glam = { workspace = true }

[dev-dependencies]
koto_test_utils = { workspace = true }
