[package]
name = "koto_random"
version = "0.17.0"
description = "A Koto library for working with random numbers"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = ["rc"]

# Only one memory management strategy can be enabled at a time.
# To use any other than `rc`, default features must be disabled.
arc = [
    "koto_runtime/arc",
    "koto_derive/arc",
    "koto_test_utils/arc",
    "koto_memory/arc",
]
agc = [
    "koto_runtime/agc",
    "koto_derive/agc",
    "koto_test_utils/agc",
    "koto_memory/agc",
]
rc = [
    "koto_runtime/rc",
    "koto_derive/rc",
    "koto_test_utils/rc",
    "koto_memory/rc",
]
gc = [
    "koto_runtime/gc",
    "koto_derive/gc",
    "koto_test_utils/gc",
    "koto_memory/gc",
]

[dependencies]
koto_runtime = { workspace = true }

lazy_static = { workspace = true }
rand = { workspace = true, features = ["std", "os_rng"] }
rand_xoshiro = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }

[dev-dependencies]
koto_derive = { workspace = true }
koto_test_utils = { workspace = true }
koto_memory = { workspace = true }
